@@ -1,13 +1,13 @@
 Before 0.94
 -----------------
-Boost/poller_output support
+DONE!   Boost/poller_output support
+DONE!   THold DS
+DONE!   INBWFORMAT/OUTBWFORMAT
+DONE!   Unidirectional links
+(php-rrdtool support?)
 (Editor NG)
 Extra DS for WUG, Nagios
 USESCALE can use any variable - USESCALE scalename {node:this:cactihost_latency}
-DONE!   INBWFORMAT/OUTBWFORMAT
-Unidirectional links
-(php-rrdtool support?)
-DONE!   THold DS
 Finish Artificial Icons
 Editor shows absolute coordinates for relative-positioned nodes...
 Colours do wierd things with artificial icons - needs extra colour defs. How to make fit with USESCALE?
